--- a/manifests/c9-app.yaml
+++ b/manifests/c9-app.yaml
@@ -43,4 +43,4 @@ spec:
         - name: kube-config
           mountPath: "/root/.kube/"         
         ports:
-        - containerPort: __CONT_PORT__
+        - containerPort: 3000
